Week 2 complemented with PUT method working in UI
