# server.js
@@ -7,23 +7,34 @@
  *************************/
 const express = require('express');
 const cors = require('cors');
-const mongodb = require('./models');
 const app = express();
 const db = require('./models');
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger-output.json');
+
+const bodyParser = require('body-parser');
 
 
 
 var corsOption = {
     origin: "http://localhost:8081"
 };
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use(cors(corsOption));
 
 // parse requests of content-type - application/json
 app.use(express.json());
+
+app.use(express.urlencoded({ extended: true }))
+app.use(bodyParser.json());
+
+app.use((req, res, next) => {
+    res.setHeader('Access-Control-Allow-Origin', '*');
+    res.setHeader(
+        'Access-Control-Allow-Headers',
+        'Origin, X-Requested-With, Content-Type, Accept, Z-key'
+    );
+    res.setHeader('Access-Control-Allow-Methods', 'GET', 'POST', 'PUT', 'DELETE', 'OPTIONS');
+    next();
+}); 
 
 /* ***********************
  * Routes
